<resources>
    <string name="app_name">Deep Space Survivor</string>
    <string name="title">Deep Space Survivor</string>
    <string name="play_game">Play Game</string>
    <string name="game_screen_name">Game Screen</string>
    <string name="view_high_scores">View High Scores</string>
    <string name="spaceship">spaceship</string>
    <string name="space_background">space_background</string>
    <string name="copyright">\u00A9 Brandon Litwin 2019</string>
    <string name="ring_planet">ring_planet</string>
    <string name="big_planet">big_planet</string>
    <string name="credit">All art used with permission from OpenGameArt.org</string>
    <string name="gameover">Game Over</string>
    <string name="gameover_score">Final score: </string>
    <string name="play_again">Play Again</string>
    <string name="high_scores">High Scores</string>
    <string name="main_menu">Main Menu</string>
    <string name="reset_high_scores">Reset High Scores</string>
    <string name="tesths">testHS</string>
    <string name="score1">1.</string>
    <string name="score2">2.</string>
    <string name="score3">3.</string>
    <string name="score4">4.</string>
    <string name="score5">5.</string>
    <string name="score6">6.</string>
    <string name="score7">7.</string>
    <string name="score8">8.</string>
    <string name="score9">9.</string>
    <string name="score10">10.</string>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
</resources>
