<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/playGame"
        android:layout_width="170dp"
        android:layout_height="68dp"
        android:layout_marginBottom="11dp"
        android:onClick="launchGame"
        android:text="@string/play_game"
        app:layout_constraintBottom_toTopOf="@+id/mainMenuViewHighScoresButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTitle" />

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="318dp"
        android:layout_height="87dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/playGame"
        app:layout_constraintEnd_toStartOf="@+id/menuRingPlanet"
        app:layout_constraintStart_toStartOf="@+id/menuRingPlanet"
        app:layout_constraintTop_toBottomOf="@+id/menuShip" />

    <Button
        android:id="@+id/mainMenuViewHighScoresButton"
        android:layout_width="170dp"
        android:layout_height="72dp"
        android:layout_marginBottom="23dp"
        android:onClick="viewHighScores"
        android:text="@string/view_high_scores"
        app:layout_constraintBottom_toTopOf="@+id/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playGame" />

    <ImageView
        android:id="@+id/menuShip"
        android:layout_width="86dp"
        android:layout_height="0dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/spaceship"
        app:layout_constraintBottom_toTopOf="@+id/gameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuBigPlanet"
        app:srcCompat="@drawable/spaceship" />

    <ImageView
        android:id="@+id/menuRingPlanet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="368dp"
        android:contentDescription="@string/ring_planet"
        app:layout_constraintBottom_toTopOf="@+id/credit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menuBigPlanet"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/parallax_space_ring_planet" />

    <ImageView
        android:id="@+id/menuBigPlanet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/big_planet"
        app:layout_constraintBottom_toTopOf="@+id/menuShip"
        app:layout_constraintEnd_toStartOf="@+id/menuRingPlanet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/parallax_space_big_planet" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="236dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:text="@string/copyright"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/credit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuViewHighScoresButton"
        tools:text="@string/copyright" />

    <TextView
        android:id="@+id/credit"
        android:layout_width="180dp"
        android:layout_height="85dp"
        android:layout_marginBottom="1dp"
        android:text="@string/credit"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuRingPlanet"
        tools:text="@string/credit" />

</androidx.constraintlayout.widget.ConstraintLayout>