<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".GameOverActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="194dp"
        android:layout_height="0dp"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="87dp"
        android:gravity="center"
        android:text="@string/gameover"
        android:textColor="@color/white"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="196dp"
        android:layout_height="0dp"
        android:layout_marginBottom="109dp"
        android:gravity="center"
        android:text="@string/gameover_score"
        android:textColor="@color/white"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button3"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:layout_marginBottom="236dp"
        android:gravity="center"
        android:onClick="launchGame"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>